# LEDCube

./: FirstRunCost.txt  README.md
Firmware/LED-cube/: CMakeLists.txt
Firmware/LED-cube/main/: CMakeLists.txt  cube.c  cube.h  effects.h  idf_component.yml  main.cpp
Firmware/LED-cube/main/AdafruitGFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  LEDCubePort.cpp  LEDCubePort.h
Firmware/LED-cube/main/BMA400/: bma400.c  bma400.h  bma400_defs.h  common.c  common.h
Firmware/LED-cube/main/Network/: app_index.html  http_server.c  http_server.h  network.c  network.h  wifi.c  wifi.h
Firmware/LED-cube/main/Power/: battery.c  battery.h  charger.c  charger.h  power.c  power.h
KiCad/: LEDCube.kicad_pcb  LEDCube.kicad_prl  LEDCube.kicad_pro  LEDCube.kicad_sch  LED_Matrix.kicad_sch  PlateCircuitry.kicad_sch  fp-info-cache  fp-lib-table
KiCad/LEDCube.pretty/: MIC37300-3.3-SPAK3.kicad_mod  RGB_LED.kicad_mod
KiCadController/: LEDCube.csv  LEDCube.drl  LEDCube.kicad_pcb  LEDCube.kicad_prl  LEDCube.kicad_pro  LEDCube.kicad_sch  LEDCube.xml  LED_Matrix.kicad_sch  LedCube.kicad_sym  PlateCircuitry.kicad_sch  fp-info-cache  sym-lib-table  ~LEDCube.kicad_sch.lck
KiCadController/LEDCube.pretty/: PowerSwitch.kicad_mod
KiCadController/Manufacturing/: LEDCube-B_Cu.gbr  LEDCube-B_Mask.gbr  LEDCube-B_Paste.gbr  LEDCube-B_Silkscreen.gbr  LEDCube-Edge_Cuts.gbr  LEDCube-F_Cu.gbr  LEDCube-F_Mask.gbr  LEDCube-F_Paste.gbr  LEDCube-F_Silkscreen.gbr  LEDCube-In1_Cu.gbr  LEDCube-In2_Cu.gbr  LEDCube.drl
KiCadPanel/KiCadPanel/: KiCadPanel.csv  KiCadPanel.kicad_pcb  KiCadPanel.kicad_prl  KiCadPanel.xml  (+5 more)
(+23 files in other folders)
